===== 0.4.0 =====
20230602

* 游戏界面优化：
    * 更好的球桌画面
    * 统一背景色
    * 白球打点十字辅助线
    * 使键盘WASD在有遮挡的时候仍可以向好的方向调整白球打点
    * 修复了由于帧率导致出杆鬼畜乱拐的问题
* 渲染速度优化：
    * 在球桌画面未改变时避免重复渲染
* 物理效果更新：
    * 实装了库边弹性造成的非完美反弹
    * 碰普通的库之后产生旋转
    * 重写了两球碰撞的代码：
        * 替换为线性空间换底
        * 修改了判定准确碰撞点的代码
        * 似乎修复了两颗球碰撞时有概率粘在一起的bug
    * 略微优化了边库和底库的反弹效果
* 新增了几种球桌和球的尺寸
* 放弃了采用不同的物理时间来优化性能的机制：bug难以修复
* 其他小幅度物理调整

===== 0.3.6.2 =====
20230530

* UI性能优化：
    * 将帧率上限放宽至500FPS
    * 弃用Timeline，改为原生的Timer，帧率上升3-4倍
    * 将白球预测线的物理帧间隔延长
* 游戏界面加入第二重白球预测线防卡死的保险（应该没用）
* 预测白球时记录碰撞点

===== 0.3.6.1 =====
20230529

* 修改了游戏渲染逻辑，避免了运算负载过重时卡死的问题：
    * 上一帧渲染完成前，下一帧不会开始渲染
* 减少了白球预测线的计算次数：仅用户输入变化时运算
* 新增帧率上限选项
* 新增实时帧率显示
* 加入了补帧机制
* 游戏界面运算优化

===== 0.3.5.2 =====
20230528

* 微调了齿轮效应
* 修复了部分球员不会斯诺克开球的问题
* 调整了扎杆（依旧不真实）
* 修复了生涯模式从赛程表界面返回主界面时不刷新的问题

===== 0.3.5.1 =====
20230528

* 加入了快速游戏的球员分类筛选

===== 0.3.5 =====
20230528

* 实装了部分齿轮效应：
    * 碰撞造成的旋转
    * 旋转的传递
    * 旋转造成的轻微分离角偏差
* 重命名部分比赛

===== 0.3.4 =====
20230528

* 生涯模式挑战
* 修复了桌角被瞄准线染色的bug
* 缩减生涯模式存档体积：删除了AI球员的等级、经验、技能点等无用的东西
* 将小斯诺克改为六红球斯诺克
* 代码结构优化：
    * 将球桌绘制部分封装
    * 将部分通用规则统一判定
    * 清理了部分无用代码

===== 0.3.3 =====
20230523

* 新增快速游戏练球模式：
    * 各种蛇彩

===== 0.3.2.1 =====
20230522

* 修复了交换击球权时不换手的问题
* 优化了游戏界面：
    * 击球之后禁用换手
    * 增加了出杆动画出错后的冗余度
* 加大了球桌的圆角

===== 0.3.2 =====
20230521

* 新增设置界面
* 新增快速游戏难度设定
* 斯诺克AI开球加入预测功能
* 调整了生涯模式加点：提高了能力接近100时加点的作用
* bug修复：
    * 修复了斯诺克最后一颗红球打进但犯规后，对手目标球仍是红球的问题
    * 修复了获得手中球后，可以摆好了再让对手打的问题
    * 减少了物理运算卡死，由用户强制中止后，出现无法击打问题的概率
    * 修复了AI运算卡死后即使退出游戏后台进程仍然运行的问题

===== 0.3.1.1 =====
20230520

* 修复了生涯模式赛事结束后直接退出游戏的问题
* 加入了确认退出游戏的弹出框

===== 0.3.1 =====
20230520

* 实装了中式八球的开球失机/美式九球的开球违例和开球犯规
* 加入了九球的黄金九统计
* 界面去窗口化
* bug修复:
    * 修复了斯诺克自由球让杆给对手自由球的bug
    * 修复了换手之后键盘操作失效的问题
    * 修复了让杆时杆的贴图还在的问题

===== 0.3.0 =====
20230519

* 实装了美式九球
* 新增屏幕分辨率及系统缩放的配置项
* 修改了一些球杆的参数
* 修复了中式八球开球可以随便摆球的bug

===== 0.2.1 =====
20230518

* 修改了中袋尺寸算法
* 将中袋尺寸改为袋口直线尺寸：
    * 影响直+弯的袋口
    * 不影响全弯袋口
* 取消了直袋角与弯袋角的本质区别
* 加入了美式球桌颗星标记
* 微调了袋口难度
