@@ -18,7 +18,7 @@ import java.sql.*;
 import java.util.*;
 
 public class DBAccess {
-    public static final boolean SAVE = true;
+    public static final boolean SAVE = false;
     private static DBAccess database;
 
     private Connection connection;
