@@ -49,9 +49,10 @@
 
         <Label text="%language" GridPane.rowIndex="6"/>
         <ComboBox fx:id="languageBox" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
-        
-        <Label text="%frameRate" GridPane.rowIndex="7"/>
-        <ComboBox fx:id="frameRateBox" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+
+        <Label text="%frameRate" GridPane.rowIndex="7" visible="false" managed="false"/>
+        <ComboBox fx:id="frameRateBox" GridPane.rowIndex="7" GridPane.columnIndex="1"
+                  visible="false" managed="false"/>
 
         <Label text="%numAiThreads" GridPane.rowIndex="8"/>
         <ComboBox fx:id="aiThreadNumBox" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
