@@ -9,6 +9,9 @@
     * 修复了由于帧率导致出杆鬼畜乱拐的问题
 * 渲染速度优化：
     * 在球桌画面未改变时避免重复渲染
+    * 修改了渲染器
+    * 取消了设置内的帧率限制
+    * 通过 -Djavafx.animation.fullspeed=true 取消帧率限制
 * 物理效果更新：
     * 实装了库边弹性造成的非完美反弹
     * 碰普通的库之后产生旋转
